my-blog_project/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog-container
          image: blog-site:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
