my-blog_project/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  type: NodePort
  selector:
    app: blog
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30008
